# ld-character-game

./: .gitignore  Character_Backstory_labels.csv  Character_Body_Logic_labels.csv  Character_Description_labels.csv  Character_Drive_labels.csv  Character_Flaw_labels.csv  Character_Identity_labels.csv  Character_Motivation_labels.csv  Character_Role_Dynamics_labels.csv  Character_Role_Interactions_labels.csv  Character_Roles_labels.csv  Character_Truth_labels.csv  Character_Voice_labels.csv  Character_decision_style_labels.csv  GameIntro.jsx  Loader + normalizer + quick graph analytics  Procfile  README.md  Symbolic_Character_labels.csv  The_Archetypal_Character_labels.csv  analyze.js  archetypal_character_seeder.json  bash bootstrap_ld_character.sh  char_slice_report.md  character_change.seeder.json  character_conflict.seeder.json  character_description_seeder.json  character_drive_seeder.json  character_flaw_seeder.json  character_master_char_seeders_20251028T182210Z.jsonl  character_master_char_seeders_20251028T182834Z.jsonl  character_roles_seeder_v2.json  character_stakes.seeder.json  character_wound_seeder.json  deploy_gms_html5.sh  dynamic_character_seeder.json  grader_rules.json  ld test game.yyz  ld_character_game.yyz  ld_graph.json  (+7 more)
character_api/: .env.example  README.md  pyproject.toml
character_api/data/lessons/: character_master_min.jsonl
character_api/server/: __init__.py  badges.py  features.py  limits.py  loaders.py  logging.py  main.py  models.py  scheduler.py  scoring.py  security.py  storage.py  telemetry.py  telemetry_summary.py  util.py
(+695 files in other folders)
