[project]
name = "character-api"
version = "0.1.0"
description = "FastAPI backend for character game"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.10,<3.0",
    "orjson",
    "python-dotenv"
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
